# sbig-camera-control-tui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CMakeModules/: CPackConfig.cmake  FindCFITSIO.cmake
src/: CMakeLists.txt  camera_server.cpp  client.cpp  client.hpp  main.cpp  worker.cpp  worker.hpp
src/base_types/: CMakeLists.txt  camera.cpp  camera.hpp  device.cpp  device.hpp  filter_wheel.cpp  filter_wheel.hpp  image_data.cpp  image_data.hpp
src/common/: CMakeLists.txt  common.cpp  common.hpp  coordinate_conversions.cpp  coordinate_conversions.hpp  datetime_utilities.hpp  image.cpp  image.hpp  logging.cpp  logging.hpp  version_number.hpp
src/sbig/: CMakeLists.txt  ExposureSettings.cpp  ExposureSettings.hpp  sbig_st_camera.cpp  sbig_st_camera.hpp  sbig_st_camera__.cpp  sbig_st_camera__.hpp  sbig_st_device.cpp  sbig_st_device.hpp  sbig_st_device_info.cpp  sbig_st_device_info.hpp  sbig_st_driver.cpp  sbig_st_driver.hpp  sbig_st_errors.cpp  sbig_st_errors.hpp  sbig_st_filter_wheel.cpp  sbig_st_filter_wheel.hpp  sbig_st_readout_mode.cpp  sbig_st_readout_mode.hpp  utilities.cpp  utilities.hpp
